; ModuleID = '/home/carl/AnghaBench/darknet/src/extr_utils.c_constrain.c'
source_filename = "/home/carl/AnghaBench/darknet/src/extr_utils.c_constrain.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local float @constrain(float %0, float %1, float %2) #0 {
  %4 = alloca float, align 4
  %5 = alloca float, align 4
  %6 = alloca float, align 4
  %7 = alloca float, align 4
  store float %0, float* %5, align 4
  store float %1, float* %6, align 4
  store float %2, float* %7, align 4
  %8 = load float, float* %7, align 4
  %9 = load float, float* %5, align 4
  %10 = fcmp olt float %8, %9
  br i1 %10, label %11, label %13

11:                                               ; preds = %3
  %12 = load float, float* %5, align 4
  store float %12, float* %4, align 4
  br label %21

13:                                               ; preds = %3
  %14 = load float, float* %7, align 4
  %15 = load float, float* %6, align 4
  %16 = fcmp ogt float %14, %15
  br i1 %16, label %17, label %19

17:                                               ; preds = %13
  %18 = load float, float* %6, align 4
  store float %18, float* %4, align 4
  br label %21

19:                                               ; preds = %13
  %20 = load float, float* %7, align 4
  store float %20, float* %4, align 4
  br label %21

21:                                               ; preds = %19, %17, %11
  %22 = load float, float* %4, align 4
  ret float %22
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
